--- a/perl5/lib/perl5/x86_64-linux-thread-multi/perllocal.pod
+++ b/perl5/lib/perl5/x86_64-linux-thread-multi/perllocal.pod
@@ -218,3 +218,25 @@ C<EXE_FILES: >
 
 =back
 
+=head2 Fri Apr 25 08:47:12 2014: C<Module> L<Statistics::LineFit|Statistics::LineFit>
+
+=over 4
+
+=item *
+
+C<installed into: /home/neil/perl5/lib/perl5>
+
+=item *
+
+C<LINKTYPE: dynamic>
+
+=item *
+
+C<VERSION: 0.06>
+
+=item *
+
+C<EXE_FILES: >
+
+=back
+
