Added cpanm for maintaining DR's Perl library

--- a/perl5/lib/perl5/x86_64-linux-thread-multi/perllocal.pod
+++ b/perl5/lib/perl5/x86_64-linux-thread-multi/perllocal.pod
@@ -240,3 +240,25 @@ C<EXE_FILES: >
 
 =back
 
+=head2 Tue Aug 12 13:45:08 2014: C<Module> L<App::cpanminus|App::cpanminus>
+
+=over 4
+
+=item *
+
+C<installed into: /home/neil/perl5/lib/perl5>
+
+=item *
+
+C<LINKTYPE: dynamic>
+
+=item *
+
+C<VERSION: 1.7004>
+
+=item *
+
+C<EXE_FILES: bin/cpanm>
+
+=back
+
